--- a/src/modules/acc/views/gisTools.html
+++ b/src/modules/acc/views/gisTools.html
@@ -1,7 +1,10 @@
 <div>
     <div class="btn-group leaflet-bar dropdown">
-        <button class="btn btn-primary" ng-click="vm.goSettings()">
+        <!-- <button class="btn btn-primary" ng-click="vm.goSettings()">
             <i class="glyphicon glyphicon-cog"></i>
+        </button> -->
+        <button class="btn btn-default" ng-click="vm.test()">
+            <i class="glyphicon glyphicon-search"></i>
         </button>
         <ul class="dropdown-menu dropdown-menu-right" ng-init="vm.loadAreas()">
             <li ng-repeat="area in areas">
@@ -13,9 +16,6 @@
         </button>
     </div>
     <div class="btn-group leaflet-bar">
-        <button class="btn btn-default" ng-click="vm.test()">
-            <i class="glyphicon glyphicon-search"></i>
-        </button>
         <button class="btn btn-default">
             <i class="glyphicon glyphicon-volume-up"></i>
         </button>
