--- a/src/less/imports/common.less
+++ b/src/less/imports/common.less
@@ -201,30 +201,13 @@ body {
   background-color: #5cb85c;
 }
 
-/* table */
-table.table-absolute {
-  // position: absolute;
-  // margin: 0;
-  // top: 0;
-  // bottom: 0;
-  // left: 0;
-  // right: 0;
+dl.dl-settings {
+  dt {
+    border-bottom: 1px solid #eee;
+    margin-bottom: 15px;
+  }
 
-  // tbody {
-  //   position: absolute;
-  //   top: 0;
-  //   bottom: 0;
-  //   left: 0;
-  //   right: 0;
-
-  //   tr {
-  //     width: 100%;
-  //   }
-  // }
-
-  // &.input-header {
-  //   tbody {
-  //     top: 51px;
-  //   }
-  // }
+  dd {
+    padding-left: 15px;
+  }
 }
