--- a/src/modules/manage/components/gislocation/list.html
+++ b/src/modules/manage/components/gislocation/list.html
@@ -30,10 +30,28 @@
                         </a>
                     </div>
                     <hr>
-                    <p class="text-muted">{{row.description}}</p>
+                    <p class="text-muted">{{row.description}}&nbsp;</p>
                 </div>
             </div>
         </div>
+        <!-- <div class="col-md-4">
+            <div class="panel panel-danger">
+                <div class="panel-body">
+                    <div class="text-center">
+                        <a href="" ng-click="vm.create()">
+                            <i class="glyphicon glyphicon-plus"></i>
+                            <strong>
+                                添加
+                            </strong>
+                        </a>
+                    </div>
+                    <hr>
+                    <p class="text-muted text-center">
+                        <a href="" ng-click="vm.create()">添加新地图</a>&nbsp;
+                    </p>
+                </div>
+            </div>
+        </div> -->
     </div>
     <div ng-pager="table" ng-init="table.reload()"></div>
 </div>
