--- a/src/modules/manage/components/settings/page.html
+++ b/src/modules/manage/components/settings/page.html
@@ -1,5 +1,5 @@
 <div ng-controller="modules/manage/components/settings/page">
-    <ul class="nav nav-tabs" role="tablist">
+    <!-- <ul class="nav nav-tabs" role="tablist">
         <li role="presentation" class="active">
             <a href="#home" aria-controls="home" role="tab" data-toggle="tab">设备类型</a>
         </li>
@@ -45,7 +45,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- <div class="col-md-12">
         <fieldset>
             <legend>
