--- a/src/modules/manage/components/equipment/categories.html
+++ b/src/modules/manage/components/equipment/categories.html
@@ -1,27 +1,30 @@
 <div class="row" ng-controller="modules/manage/components/equipment/categories">
     <div class="col-md-3">
-        <div class="panel panel-default" ng-init="vm.loadCategory()">
-            <div class="panel-heading">
-                分类
-            </div>
-            <div class="list-group">
-                <div class="list-group-item" href="" ng-class="{'list-group-item-info': currentCategory.id===cat.id}" ng-repeat="cat in categories">
-                    <a href="" ng-click="vm.selectCategory(cat)">{{cat.name}}</a>
-                    <a href="" class="text-danger pull-right">
+        <form class="form-inline" style="margin-bottom: 20px;">
+            <button class="btn btn-primary" ng-click="vm.addCategory()">
+                <i class="glyphicon glyphicon-plus"></i>
+                添加大类
+            </button>
+        </form>
+        <table ng-table class="table table-hover" ng-init="vm.loadCategory()">
+            <colgroup>
+                <col>
+                <col width="120px">
+            </colgroup>
+            <tr style="cursor: pointer" ng-repeat="cat in categories" ng-class="{'info': currentCategory.id===cat.id}" ng-click="vm.selectCategory(cat)">
+                <td title="'名称'">{{cat.name}}</td>
+                <td title="'操作'">
+                    <a href="" ng-click="vm.editCategory(cat)">
+                        <i class="glyphicon glyphicon-edit"></i>
+                        编辑
+                    </a>&nbsp;
+                    <a href="" class="text-danger" ng-click="vm.deleteCategory(cat, $event)">
                         <i class="glyphicon glyphicon-trash"></i>
                         删除
                     </a>
-                    <a href="" class="pull-right" ng-click="vm.editCategory(cat)">
-                        <i class="glyphicon glyphicon-edit"></i>
-                        编辑
-                    </a>
-                </div>
-                <a class="list-group-item text-center" href="" ng-click="vm.addCategory()">
-                    <i class="glyphicon glyphicon-plus"></i>
-                    添加
-                </a>
-            </div>
-        </div>
+                </td>
+            </tr>
+        </table>
     </div>
     <div class="col-md-9">
         <form class="form-inline" style="margin-bottom: 20px;">
@@ -31,14 +34,20 @@
             </button>
         </form>
         <table ng-table class="table table-striped">
+            <colgroup>
+                <col>
+                <col>
+                <col width="120px">
+            </colgroup>
             <tr ng-repeat="row in eqtypes">
                 <td title="'名称'">{{row.name}}</td>
+                <td title="'描述'">{{row.description}}</td>
                 <td title="'操作'">
                     <a href="">
                         <i class="glyphicon glyphicon-edit"></i>
                         编辑
-                    </a>
-                    <a href="" class="text-danger">
+                    </a>&nbsp;
+                    <a href="" class="text-danger" ng-click="vm.deleteEquipmentType(row)">
                         <i class="glyphicon glyphicon-trash"></i>
                         删除
                     </a>
