--- a/src/modules/manage/components/equipment/list.html
+++ b/src/modules/manage/components/equipment/list.html
@@ -11,13 +11,25 @@
     <!-- <div nicescroll jexcel="jexcel" class="table-responsive manage-table"></div> -->
 
     <table ng-table="table" class="table table-striped table-hover">
+        <colgroup>
+            <col>
+            <col>
+            <col>
+            <col width="120px">
+        </colgroup>
         <tr ng-repeat="row in $data">
             <td title="'编号'">{{row.code}}</td>
             <td title="'设备名称'">{{row.name}}</td>
-            <td title="'类型'">{{row.categoryName}}</td>
+            <td title="'类型'">{{row.type.name}}</td>
             <td title="'操作'">
-                <a href="" ng-click="vm.edit(row)">编辑</a>
-                <a href="" ng-click="vm.drop(row)">删除</a>
+                <a href="" ng-click="vm.edit(row)">
+                    <i class="glyphicon glyphicon-edit"></i>
+                    编辑
+                </a>&nbsp;
+                <a href="" class="text-danger" ng-click="vm.drop(row)">
+                    <i class="glyphicon glyphicon-trash"></i>
+                    删除
+                </a>
             </td>
         </tr>
     </table>
