--- a/src/modules/acc/components/gisSettings/settings.html
+++ b/src/modules/acc/components/gisSettings/settings.html
@@ -17,6 +17,18 @@
                             保存
                         </a>
                     </div>
+                    <!-- <div class="navbar-form navbar-right">
+                        <div class="btn-group">
+                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                添加元素 <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li>
+                                    <a href="">geoJson</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div> -->
                 </div>
             </div>
             <div class="acc-container" style="margin-top: 50px">
