--- a/src/modules/acc/components/gisSettings/settings.html
+++ b/src/modules/acc/components/gisSettings/settings.html
@@ -17,24 +17,12 @@
                             保存
                         </a>
                     </div>
-                    <!-- <div class="navbar-form navbar-right">
-                        <div class="btn-group">
-                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                添加元素 <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="">geoJson</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div> -->
                 </div>
             </div>
             <div class="acc-container" style="margin-top: 50px">
                 <div class="acc-container tools" ng-include="'modules/acc/components/gisSettings/toolbox.html'" ng-controller="modules/acc/components/gisSettings/toolbox"></div>
                 <div class="acc-container area" ng-controller="modules/acc/components/gisSettings/map">
-                    <div class="map-area acc-container" ng-drop="true" ng-drop-success="vm.addEquipment($data, $event)"></div>
+                    <div leaflet class="map-area acc-container" layers="model.properties.layers" defaults="model.properties.defaults"></div>
                 </div>
                 <div class="acc-container property" ng-include="'modules/acc/components/gisSettings/layers.html'" ng-controller="modules/acc/components/gisSettings/layers"></div>
             </div>
