--- a/src/modules/acc/components/gisSettings/layers.html
+++ b/src/modules/acc/components/gisSettings/layers.html
@@ -119,15 +119,15 @@
                 <dd>
                     <div class="form-group">
                         <label>经度</label>
-                        <div>{{model.properties.mapview.centerLng}}</div>
+                        <div>{{model.properties.defaults.center.lng}}</div>
                     </div>
                     <div class="form-group">
                         <label>纬度</label>
-                        <div>{{model.properties.mapview.centerLat}}</div>
+                        <div>{{model.properties.defaults.center.lat}}</div>
                     </div>
                     <div class="form-group">
                         <label>缩放</label>
-                        <div>{{model.properties.mapview.zoom}}</div>
+                        <div>{{model.properties.defaults.center.zoom}}</div>
                     </div>
                 </dd>
             </dl>
