--- a/src/modules/acc/components/gis/index.html
+++ b/src/modules/acc/components/gis/index.html
@@ -182,6 +182,6 @@
 
     <!--地图区域-->
     <div class="panel panel-default acc-container acc-bar-center">
-        <div class="map-area acc-container"></div>
+        <div leaflet class="map-area acc-container" markers="area.markers" layers="area.layers" defaults="area.defaults"></div>
     </div>
 </div>
