--- a/src/less/acc.less
+++ b/src/less/acc.less
@@ -3,3 +3,4 @@
 @import 'imports/manage.less';
 @import 'imports/gissettings.less';
 @import 'imports/leaflet-patch.less';
+@import 'imports/map-element.less';
