--- a/src/css/acc.css
+++ b/src/css/acc.css
@@ -277,3 +277,24 @@ dl.dl-settings dd {
   border-bottom-left-radius: inherit;
   border-bottom-right-radius: inherit;
 }
+.pin-circle {
+  width: 50px;
+  height: 50px;
+  padding-top: 10px;
+  margin: 0 auto;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
+}
+.pin-circle > .inner {
+  width: 54px;
+  height: 54px;
+  margin-left: 10px;
+  line-height: 54px;
+  text-align: center;
+  vertical-align: middle;
+}
+.circle-danger {
+  background-color: #d9534f;
+  color: #f2dede;
+}
