--- a/src/modules/broadcast/components/terminal/location.html
+++ b/src/modules/broadcast/components/terminal/location.html
@@ -10,20 +10,38 @@
             <div class="col-md-4">
                 <div class="box">
                     <div class="box-header with-border">
-                        <h3 class="box-title">区域</h3>
+                        <h3 class="box-title">
+                            区域
+                        </h3>
                     </div>
-                    <div class="box-body no-padding" bs-treeview bs-tree-data="areas">
-
+                    <div ui-tree class="box-body no-padding">
+                        <ol ui-tree-nodes class="panel-group" ng-model="areas">
+                            <li ng-repeat="item in areas" ui-tree-node ng-include="'modules/broadcast/templates/areaTerminalNode.html'"></li>
+                        </ol>
                     </div>
                 </div>
             </div>
             <div class="col-md-8">
                 <div class="box box-info">
                     <div class="box-header with-border">
-                        <h3 class="box-title">位置信息</h3>
+                        <h3 class="box-title">
+                            位置信息：
+                            <span ng-show="currentArea" class="text-primary" ng-bind="currentArea.name"></span>
+                            <span ng-show="!currentArea"><i class="text-muted">请选择区域</i></span>
+                        </h3>
+                        <div class="box-tools">
+                            <button class="btn btn-sm btn-default" ng-disabled="!currentArea">
+                                <i class="glyphicon glyphicon-map-marker"></i>
+                                设置区域范围
+                            </button>
+                            <button class="btn btn-sm btn-success" ng-disabled="!currentArea">
+                                <i class="glyphicon glyphicon-floppy-disk"></i>
+                                保存
+                            </button>
+                        </div>
                     </div>
                     <div class="box-body no-padding">
-                        <div class="map-area" leaflet ng-drop="true" tiles="mapTiles" ng-drop-success="vm.setLocation($data, $event)"
+                        <div class="map-area" leaflet ng-drop="true" tiles="mapTiles" markers="markers" ng-drop-success="vm.setLocation($data, $event)"
                             style="height:600px" defaults="mapDefaults"></div>
                     </div>
                 </div>
