--- a/src/modules/broadcast/components/terminal/list.html
+++ b/src/modules/broadcast/components/terminal/list.html
@@ -1,4 +1,4 @@
-<div class="content-wrapper" ng-controller="modules/broadcast/components/terminal/list">
+<div- ng-controller="modules/broadcast/components/terminal/list">
     <section class="content-header">
         <h1>
             终端管理
@@ -8,7 +8,7 @@
     <section class="content">
         <div class="row">
             <div class="col-md-4">
-                <div class="box">
+                <div class="box box-primary">
                     <div class="box-header with-border">
                         <h3 class="box-title">
                             区域：
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="col-md-8">
-                <div class="box box-info">
+                <div class="box box-primary">
                     <div class="box-header with-border">
                         <h3 class="box-title">
                             设备 - 必须先选择区域才能添加设备
@@ -73,4 +73,4 @@
             </div>
         </div>
     </section>
-</div>
+    </div>
