--- a/src/less/imports/common.less
+++ b/src/less/imports/common.less
@@ -211,3 +211,21 @@ dl.dl-settings {
     padding-left: 15px;
   }
 }
+
+/* table */
+
+.ng-table {
+  th.sortable.sort-asc,
+  th.sortable.sort-desc {
+    background-color: rgba(141, 192, 219, 0.25);
+    text-shadow: 0 1px 1px hsla(0, 0%, 100%, 0.75);
+  }
+
+  th.sortable {
+    cursor: pointer;
+
+    i {
+      padding-top: 2px;
+    }
+  }
+}
