--- a/src/modules/broadcast/components/terminal/location.html
+++ b/src/modules/broadcast/components/terminal/location.html
@@ -1,4 +1,4 @@
-<div class="content-wrapper" ng-controller="modules/broadcast/components/terminal/location">
+<div ng-controller="modules/broadcast/components/terminal/location">
     <section class="content-header">
         <h1>
             终端管理
