--- a/src/css/acc.css
+++ b/src/css/acc.css
@@ -158,6 +158,18 @@ dl.dl-settings dt {
 dl.dl-settings dd {
   padding-left: 15px;
 }
+/* table */
+.ng-table th.sortable.sort-asc,
+.ng-table th.sortable.sort-desc {
+  background-color: rgba(141, 192, 219, 0.25);
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+}
+.ng-table th.sortable {
+  cursor: pointer;
+}
+.ng-table th.sortable i {
+  padding-top: 2px;
+}
 .acc-container {
   position: absolute;
   top: 0;
