--- a/src/modules/broadcast/components/terminal/list.html
+++ b/src/modules/broadcast/components/terminal/list.html
@@ -30,13 +30,13 @@
                 </div>
             </div>
             <div class="col-md-8">
-                <div class="box box-primary">
+                <div class="box box-primary" ng-show="currentArea">
                     <div class="box-header with-border">
                         <h3 class="box-title">
-                            设备 - 必须先选择区域才能添加设备
+                            设备
                         </h3>
                         <div class="box-tools">
-                            <button class="btn btn-sm btn-success" ng-click="vm.addTerminal()" ng-disabled="!currentArea">
+                            <button class="btn btn-sm btn-success" ng-click="vm.addTerminal()">
                                 <i class="glyphicon glyphicon-plus"></i>
                                 添加
                             </button>
