--- a/src/less/imports/gissettings.less
+++ b/src/less/imports/gissettings.less
@@ -19,3 +19,28 @@
   width: 300px;
   left: auto;
 }
+
+form.h-form {
+  .form-group {
+    .control-label {
+      width: 20%;
+      float: left;
+    }
+    .form-control {
+      width: 80%;
+    }
+  }
+}
+
+form.form-inline.inline-form {
+  .form-group {
+    width: 100%;
+
+    .control-label {
+      width: 20%;
+    }
+    .form-control {
+      width: 79%;
+    }
+  }
+}
